# xcdat

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  xcdat_config.hpp.in
.github/workflows/: cmake.yml
doc/: doc.html  doc.md  pandoc.sh  style.css  template.html
docs/: document.md  index.html  pandoc.sh  style.css
include/: xcdat.hpp
include/xcdat/: BitVector.hpp  DacBc.hpp  FastDacBc.hpp  FitVector.hpp  Trie.hpp  TrieBuilder.hpp  Vector.hpp  bc_vector.hpp  bc_vector_15.hpp  bc_vector_16.hpp  bc_vector_7.hpp  bc_vector_8.hpp  bit_tools.hpp  bit_vector.hpp  code_table.hpp  compact_vector.hpp  dac_bc.hpp  exception.hpp  immutable_vector.hpp  io.hpp  load_visitor.hpp  mm_vector.hpp  mmap_visitor.hpp  save_visitor.hpp  shared_tail.hpp  size_visitor.hpp  tail_vector.hpp  trie.hpp  trie_builder.hpp  utils.hpp  vector_wrapper.hpp  xcdat_basics.hpp  xcdat_config.hpp
include/xcdat/essentials/: essentials.hpp
lib/: DacBc.cpp  FitVector.cpp
pybind/: README.md  sample.py  setup.py  xcdat_pybind.cpp
sample/: CMakeLists.txt  sample.cpp
src/: BitVector.cpp  BitVector.hpp  BitVectorBuilder.hpp  CMakeLists.txt  CharRange.hpp  DacBc.cpp  DacBc.hpp  Exception.hpp  FastDacBc.cpp  FastDacBc.hpp  FitVector.cpp  FitVector.hpp  SmallVector.cpp  SmallVector.hpp  Trie.hpp  TrieBuilder.cpp  TrieBuilder.hpp  Vector.hpp  testBc.cpp  testTrie.cpp  testVector.cpp  tries_test.cpp  xcdat.cpp  xcdat.hpp  xcdatBasics.hpp  xcdat_basics.hpp
test/: CMakeLists.txt  test_bc.cpp  test_bc_vector.cpp  test_bit_vector.cpp  test_common.hpp  test_compact_vector.cpp  test_tail_vector.cpp  test_trie.cpp  tries_test.cpp  vectors_test.cpp
tests/: CMakeLists.txt  keys.txt  test_bc_vector.cpp  test_bit_vector.cpp  test_common.hpp  test_tail_vector.cpp  test_trie.cpp
tool/: CMakeLists.txt  xcdat.cpp
tools/: CMakeLists.txt  xcdat_benchmark.cpp  xcdat_build.cpp  xcdat_decode.cpp  xcdat_enumerate.cpp  xcdat_lookup.cpp  xcdat_predictive_search.cpp  xcdat_prefix_search.cpp
tools/cmd_line_parser/: parser.hpp
tools/tinyformat/: tinyformat.h
