add_executable(xcdat_build xcdat_build.cpp)
add_executable(xcdat_lookup xcdat_lookup.cpp)
add_executable(xcdat_decode xcdat_decode.cpp)
add_executable(xcdat_prefix_search xcdat_prefix_search.cpp)
add_executable(xcdat_predictive_search xcdat_predictive_search.cpp)
add_executable(xcdat_enumerate xcdat_enumerate.cpp)

